force-app/main/default/objects/Milestone__c/fields/Success_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Success_Indicator__c</fullName>
    <label>Success Indicator</label>
    <type>TextArea</type>
</CustomField>